Fix mobile overflow issue on README

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -298,6 +298,9 @@ button {
 		color: #fff;
 		text-align: center;
 	}
+	&.readme {
+		overflow: hidden;
+	}
 	&.readme .heading {
 		margin-left: 0;
 		padding-top: 120px;
